# notipdf

./: .clang-format  .gitignore  CMakeLists.txt  LICENSE  README.md
cmake/: CompilerSettings.cmake  EmbedText.cmake
inc/app/: AppConfig.hpp  Application.hpp  ConfigService.hpp  ExportDialogState.hpp  LibraryCatalog.hpp  ViewerMode.hpp
inc/core/: Logger.hpp  ProcessRunner.hpp
inc/image/: GrayImage.hpp  ImageOptimizationSettings.hpp  ImageOptimizer.hpp
inc/pdf/: ExportPreset.hpp  ExportRequest.hpp  ExportResult.hpp  MetaData.hpp  MetaWriter.hpp  PdfBackend.hpp  PdfDocument.hpp  PdfExporter.hpp  PdfImageWriter.hpp  PdfRenderer.hpp  PdfSelection.hpp  PdfSelectionRenderer.hpp
inc/render/: Camera2D.hpp  LineRenderer.hpp  PdfQuad.hpp  PdfTexture.hpp  PdfViewerRenderer.hpp  ViewerMapping.hpp
inc/ui/: ViewerPanel.hpp  Window.hpp
python/: fix_piece_numbers.py  main.py  pyproject.toml
scripts/: image2pdf.sh
src/: Application.cpp  Camera2D.cpp  ConfigService.cpp  ImageOptimizer.cpp  LibraryCatalog.cpp  LineRenderer.cpp  Logger.cpp  MetaWriter.cpp  PdfDocument.cpp  PdfExporter.cpp  PdfImageWriter.cpp  PdfQuad.cpp  PdfRenderer.cpp  PdfSelectionRenderer.cpp  PdfTexture.cpp  PdfViewerRenderer.cpp  ProcessRunner.cpp  ViewerMapping.cpp  ViewerPanel.cpp  Window.cpp  main.cpp
